test/ShouldFail/shouldfailBeginEnd.ml
let a = begin 3 ) in a